# upcoming_event_finder

./: README.md  apprunner.yaml  pyproject.toml  run.cmd.dev.sh
event_finder/: main.py  schemas.py
event_finder/config/: lists.py  settings.py
event_finder/core/: models.py  utils.py
event_finder/services/: __init__.py  firecrawl.py  llm.py  normalize.py  open_ai.py  search_ddg.py  serper.py  workflow.py
